# meditation-course-on-the-six-senses

./: .gitattributes  .gitignore  README.md  build_utils.py  copy_source_to_flutter.py  main.py  make_mkdocs.py  markdown_to_html.py  overview.md  paths.py  pyproject.toml  six-senses.code-workspace  tests.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
flet_project/: pyproject.toml
flutter_project/: .gitignore  README.md  agents.md  copy_assets.py  project_map.md  pubspec.yaml
maintenance/: README.md  audit_content.py  config_utils.py  proofread_content.py
mkdocs_project/: config.ini  main.py  manifest.webmanifest  mkdocs.yml
source/: 0.1. About the Course.md  0.2. A Note on Meditation.md  1.1. Coming Back to Your Senses.md  1.2. Sense of Sight.md  1.3. Sense of Hearing.md  1.4. Sense of Smell.md  1.5. Sense of Taste.md  1.6. Sense of Touch.md  1.7. Sense of Mind.md  2.1. Open Awareness.md  2.2. Name the Channel.md  2.3. Dual Experiences.md  2.4. Training Awareness.md  3.1. A Note on Noting.md  3.2. Overcoming the Five Obstacles.md  3.3. Samatha Vipassanā.md  3.4 Generating Interest.md  3.4. Generating Interest.md  3.5. Paying Attention to Attention.md  4.1. The Internal Dependency.md  4.2. The External Dependency.md  4.3. Conditions for Consciousness.md  4.4. Contact!.md  4.5. Creating the World.md  4.6. Saṅkhata.md  5. Vedanā.md  5.1. Sukha-vedanā.md  5.2. Dukkha-vedanā.md  5.3. Adukkham-asukha-vedanā.md  5.4. Three Types of Vedanā.md  5.5. Eighteen Types of Vedanā.md  5.6. Craving, Aversion and Ignorance.md  (+37 more)
(+488 files in other folders)
