[project]
name = "six-senses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.5.45",
    "mkdocs>=1.6.1",
    "markdown>=3.7",
    "ruff>=0.9.9",
    "unidecode>=1.3.8",
    "flet-audio>=0.1.0",
    "cairosvg>=2.7.1",
]

[dependency-groups]
dev = [
    "flet[all]>=0.27.5",
]
